<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_dismiss_member"
        android:orderInCategory="102"
        android:title="@string/menu_dismiss_member"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/menu_member_edit"
        android:orderInCategory="103"
        android:title="@string/menu_member_edit_label"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/menu_enroll_newborn"
        android:orderInCategory="104"
        android:title="@string/menu_enroll_number_label"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/menu_search_by_name_or_id"
        android:orderInCategory="105"
        android:title="@string/search_member_hint"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/menu_status"
        android:orderInCategory="106"
        android:title="@string/menu_status_label"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="107"
        android:title="@string/menu_logout_label"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/menu_sync_now"
        android:orderInCategory="108"
        android:title="@string/menu_sync_now"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/menu_member_search"
        android:orderInCategory="110"
        app:showAsAction="always"
        app:actionLayout="@layout/view_toolbar_search"
        android:title="@string/search_member_hint"
        android:visible="false" />
    <item
        android:id="@+id/menu_export_db"
        android:orderInCategory="111"
        android:title="@string/menu_export_db"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="112"
        android:title="@string/menu_settings_label"
        app:showAsAction="never"
        android:visible="false" />
</menu>
